<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/darkgray"
            android:orientation="vertical">

                <com.mbn.elkhodary.customview.textview.TextViewBold
                    style="@style/txt_white_big"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_8"
                    android:layout_marginLeft="@dimen/value_15"
                    android:layout_marginRight="@dimen/value_15"
                    android:layout_marginTop="@dimen/value_8"
                    android:gravity="center"
                    android:text="@string/reset_your_world"
                    android:layout_marginEnd="@dimen/value_15"
                    android:layout_marginStart="@dimen/value_15" />

                <com.mbn.elkhodary.customview.textview.TextViewLight
                    style="@style/txt_white_micro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_8"
                    android:layout_marginLeft="@dimen/value_15"
                    android:layout_marginRight="@dimen/value_15"
                    android:layout_marginTop="@dimen/value_8"
                    android:gravity="center"
                    android:text="@string/forget_pass_pin_desc"
                    android:layout_marginEnd="@dimen/value_15"
                    android:layout_marginStart="@dimen/value_15" />

                <com.mbn.elkhodary.customview.edittext.EditTextMedium
                    android:id="@+id/etPin"
                    style="@style/txt_white_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_5"
                    android:layout_marginLeft="@dimen/value_25"
                    android:layout_marginRight="@dimen/value_25"
                    android:layout_marginTop="@dimen/value_5"
                    android:hint="@string/enter_pin"
                    android:textAlignment="center"
                    android:layout_marginEnd="@dimen/value_25"
                    android:layout_marginStart="@dimen/value_25" />

                <com.mbn.elkhodary.customview.textview.TextViewLight
                    android:id="@+id/tvNowEnterPass"
                    style="@style/txt_gray_micro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_3"
                    android:layout_marginLeft="@dimen/value_15"
                    android:layout_marginRight="@dimen/value_15"
                    android:layout_marginTop="@dimen/value_3"
                    android:gravity="center"
                    android:text="@string/now_you_can_enter_new_password"
                    android:visibility="invisible"
                    android:layout_marginStart="@dimen/value_15"
                    android:layout_marginEnd="@dimen/value_15" />

                <com.mbn.elkhodary.customview.edittext.EditTextMedium
                    android:id="@+id/etNewPassword"
                    style="@style/txt_white_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_3"
                    android:layout_marginLeft="@dimen/value_25"
                    android:layout_marginRight="@dimen/value_25"
                    android:layout_marginTop="@dimen/value_3"
                    android:hint="@string/enter_new_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    android:layout_marginStart="@dimen/value_25"
                    android:layout_marginEnd="@dimen/value_25" />

                <com.mbn.elkhodary.customview.edittext.EditTextMedium
                    android:id="@+id/etConfirrmNewPassword"
                    style="@style/txt_white_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_3"
                    android:layout_marginLeft="@dimen/value_25"
                    android:layout_marginRight="@dimen/value_25"
                    android:layout_marginTop="@dimen/value_3"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:visibility="invisible"
                    android:layout_marginStart="@dimen/value_25"
                    android:layout_marginEnd="@dimen/value_25" />

                <com.mbn.elkhodary.customview.textview.TextViewRegular
                    android:id="@+id/tvSetNewPass"
                    style="@style/txt_white_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/value_25"
                    android:layout_marginLeft="@dimen/value_15"
                    android:layout_marginRight="@dimen/value_15"
                    android:layout_marginTop="@dimen/value_8"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/value_5"
                    android:text="@string/set_new_password"
                    android:layout_marginEnd="@dimen/value_15"
                    android:layout_marginStart="@dimen/value_15" />

        </LinearLayout>


</LinearLayout>