<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/crMain"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <include layout="@layout/toolbar" />
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.mbn.elkhodary.customview.textview.TextViewMedium
                android:id="@+id/tvTitle"
                style="@style/txt_black_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/value_5"
                android:text="@string/change_password" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/value_5"
                android:layout_marginRight="@dimen/value_5"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/value_5"
                android:layout_marginEnd="@dimen/value_5">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:theme="@style/TextLabel">

                    <com.mbn.elkhodary.customview.edittext.EditTextRegular
                        android:id="@+id/etEmail"
                        style="@style/txt_gray_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:hint="@string/email_id"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/value_10"
                        android:singleLine="true"
                        android:theme="@style/Theme.App.Base" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/value_3"
                    android:theme="@style/TextLabel">

                    <com.mbn.elkhodary.customview.edittext.EditTextRegular
                        android:id="@+id/etOldPassword"
                        style="@style/txt_gray_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:hint="@string/old_password"
                        android:lines="1"
                        android:paddingBottom="@dimen/value_10"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:theme="@style/Theme.App.Base" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/value_3"
                    android:theme="@style/TextLabel">

                    <com.mbn.elkhodary.customview.edittext.EditTextRegular
                        android:id="@+id/etNewPassword"
                        style="@style/txt_gray_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:hint="@string/new_password"
                        android:lines="1"
                        android:paddingBottom="@dimen/value_10"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:theme="@style/Theme.App.Base" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/value_3"
                    android:theme="@style/TextLabel">

                    <com.mbn.elkhodary.customview.edittext.EditTextRegular
                        android:id="@+id/etConfirrmNewPassword"
                        style="@style/txt_gray_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="1"
                        android:hint="@string/retype_password"
                        android:lines="1"
                        android:paddingBottom="@dimen/value_10"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:theme="@style/Theme.App.Base" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/value_5"
                android:layout_marginLeft="@dimen/value_5"
                android:layout_marginRight="@dimen/value_5"
                android:layout_marginTop="@dimen/value_5"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="@dimen/value_5"
                android:layout_marginEnd="@dimen/value_5"
                android:layout_marginStart="@dimen/value_5">

                <com.mbn.elkhodary.customview.textview.TextViewRegular
                    android:id="@+id/tvCancel"
                    style="@style/txt_white_medium"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/cancel" />

                <com.mbn.elkhodary.customview.textview.TextViewRegular
                    android:layout_width="@dimen/value_0.5"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <com.mbn.elkhodary.customview.textview.TextViewRegular
                    android:id="@+id/tvSave"
                    style="@style/txt_white_medium"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/save" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
    <include layout="@layout/layout_whatsapp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
