<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/value_1"
        android:background="@color/darkgray"
        android:orientation="vertical">

        <com.mbn.elkhodary.customview.textview.TextViewBold
            style="@style/txt_white_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_8"
            android:layout_marginEnd="@dimen/value_15"
            android:layout_marginLeft="@dimen/value_15"
            android:layout_marginRight="@dimen/value_15"
            android:layout_marginStart="@dimen/value_15"
            android:layout_marginTop="@dimen/value_8"
            android:gravity="center"
            android:text="@string/reset_your_world" />

        <com.mbn.elkhodary.customview.textview.TextViewLight
            style="@style/txt_white_micro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_8"
            android:layout_marginEnd="@dimen/value_15"
            android:layout_marginLeft="@dimen/value_15"
            android:layout_marginRight="@dimen/value_15"
            android:layout_marginStart="@dimen/value_15"
            android:layout_marginTop="@dimen/value_8"
            android:gravity="center"
            android:text="@string/forget_pass_desc" />

        <com.mbn.elkhodary.customview.edittext.EditTextRegular
            android:id="@+id/etForgetPassEmail"
            style="@style/txt_white_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_8"
            android:layout_marginEnd="@dimen/value_15"
            android:layout_marginLeft="@dimen/value_15"
            android:layout_marginRight="@dimen/value_15"
            android:layout_marginStart="@dimen/value_15"
            android:layout_marginTop="@dimen/value_8"
            android:drawablePadding="@dimen/value_10"
            app:drawableStartCompat="@drawable/ic_mail" />

        <com.mbn.elkhodary.customview.textview.TextViewRegular
            android:id="@+id/tvRequestPasswordReset"
            style="@style/txt_white_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/value_20"
            android:layout_marginEnd="@dimen/value_15"
            android:layout_marginLeft="@dimen/value_15"
            android:layout_marginRight="@dimen/value_15"
            android:layout_marginStart="@dimen/value_15"
            android:layout_marginTop="@dimen/value_8"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/value_5"
            android:text="@string/request_password_reset" />

    </LinearLayout>
</LinearLayout>